Further fixes for modal content loading, implemented search, added more styling on mobile, fixes in JS

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -85,7 +85,7 @@ a {
 // - buttons
 .btn {
     border: 0;
-    padding: 1.6rem 0;
+    padding: 1.3rem 0;
     background-color: transparent;
     cursor: pointer;
     font-weight: bold;
@@ -121,9 +121,11 @@ a {
     &--outline {
         border: 0.1rem solid $themeWhite;
         color: $themeWhite;
+        font-size: 1.5rem;
+        font-weight: 500;
 
         &.language-changer {
-            padding: 1rem 3.4rem 1rem 1.4rem;
+            padding: 1rem 4rem 1rem 1.4rem;
         }
     }
 
@@ -301,6 +303,7 @@ a {
         &__button {
             padding: 0;
             font-size: inherit;
+            -webkit-text-stroke: 0.07rem;
         }
 
         &__list {
@@ -309,8 +312,9 @@ a {
 
             &__link {
                 color: $themeBlack;
-                font-size: 2.2rem;
+                font-size: 2rem;
                 padding: 0 0.6rem;
+                -webkit-text-stroke: 0.07rem;
             }
 
             .list__item {
@@ -333,7 +337,7 @@ a {
         .logo {
             width: 7rem;
             max-width: 7rem;
-            margin-left: 10vw;
+            margin-left: 8vw;
         }
     }
 }
@@ -354,7 +358,6 @@ a {
         height: inherit;
         width: inherit;
         background-color: $themeWhite;
-        padding: 3rem;
         top: 0;
         bottom: 0;
 
@@ -372,6 +375,7 @@ a {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-bottom: 1.6rem;
 
             &__title {
                 font-family: $fontRaleway;
@@ -389,9 +393,7 @@ a {
             }
         }
 
-        &__body.language-lists {
-            margin-top: 1.6rem;
-
+        &__body {
             @media screen and (min-width: $breakpointMobile) {
                 display: flex;
                 justify-content: flex-start;
@@ -420,6 +422,71 @@ a {
                         }
                     }
                 }
+            }
+        }
+    }
+}
+
+// - languages-list
+.languages-list {
+    padding: 3rem;
+}
+
+// - search
+.search {
+    &__actions {
+        width: 100%;
+        border-bottom: 0.1rem solid $themeLightGrey;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 2rem;
+
+        &__input {
+            order: 1;
+            border: 0;
+            font-size: 1.6rem;
+            width: 100%;
+            padding: 0.6rem;
+
+            &:not(:placeholder-shown) + .icon {
+                color: $themeBlack;
+            }
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        .icon {
+            order: 0;
+            font-size: 1.8rem;
+            -webkit-text-stroke: 0.07rem;
+            margin-right: 2rem;
+            color: $themeGrey;
+        }
+
+        .close-icon {
+            font-size: 3rem;
+            -webkit-text-stroke: 0.07rem;
+            order: 2;
+        }
+    }
+
+    &__matches {
+        padding: 0.3rem 1rem;
+
+        .match {
+            padding: 0.5rem 0;
+            display: flex;
+            align-items: center;
+
+            &::before {
+                content: "\F52A";
+                padding: 0 1.2rem;
+                font-size: 1.4rem;
+                -webkit-text-stroke: 0.07rem;
+                font-family: "bootstrap-icons";
             }
         }
     }
@@ -519,6 +586,7 @@ a {
 // Hero section
 .hero {
     padding: 0;
+    margin-bottom: 1rem;
 
     &__image {
         max-width: 100%;
@@ -549,15 +617,14 @@ a {
             display: flex;
             justify-content: space-between;
             align-items: center;
-
-            .text {
-                &--grey {
-                    color: $themeGrey;
-                }
-            }
+            color: $themeGrey;
+            font-weight: 500;
+            font-size: 1.5rem;
 
             .icon {
                 font-size: 1.6rem;
+                -webkit-text-stroke: 0.07rem;
+                color: $themeBlack;
             }
         }
     }
